[gd_scene load_steps=21 format=3 uid="uid://c2epr5tr7yqs2"]

[ext_resource type="Script" path="res://scenes/weapons/middle_shot/middle_shot.gd" id="1_fjcff"]
[ext_resource type="Shader" path="res://vfx/fade/horizontal_fade.gdshader" id="2_lpeog"]
[ext_resource type="Texture2D" uid="uid://cbjufm14mfgsf" path="res://assets/sprites/shots/energy_small_blue.png" id="2_sgtno"]
[ext_resource type="PackedScene" uid="uid://cltyyd03qhp1x" path="res://scenes/components/projectile_component/projectile_component.tscn" id="2_vlwws"]
[ext_resource type="PackedScene" uid="uid://ddwtfhud2pam6" path="res://scenes/components/hitbox_component/hitbox_component.tscn" id="3_8bce1"]
[ext_resource type="AudioStream" uid="uid://dfs6c76mpcgk4" path="res://assets/audios/hits/kick_soft_jab_impact_03.wav" id="4_eutnr"]
[ext_resource type="AudioStream" uid="uid://b366teurb0oor" path="res://assets/audios/shots/retro_laser_gun_shoot_53.wav" id="6_3rqb2"]
[ext_resource type="AudioStream" uid="uid://b3lles5jvkijm" path="res://assets/audios/blocked/sword_hit_impact_04.wav" id="6_mm37u"]

[sub_resource type="Animation" id="Animation_mdgm5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:material:shader_parameter/fade_to")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="Animation" id="Animation_ualya"]
resource_name = "flying"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_pipi4"]
resource_name = "break"
length = 0.3
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:material:shader_parameter/fade_to")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2f8kg"]
_data = {
"RESET": SubResource("Animation_mdgm5"),
"break": SubResource("Animation_pipi4"),
"flying": SubResource("Animation_ualya")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ikpc1"]
resource_local_to_scene = true
shader = ExtResource("2_lpeog")
shader_parameter/fade_to = 1.0
shader_parameter/flip = true
shader_parameter/hframes = 4

[sub_resource type="CircleShape2D" id="CircleShape2D_8nyv0"]
radius = 9.05539

[sub_resource type="CircleShape2D" id="CircleShape2D_aioff"]
radius = 9.05539

[sub_resource type="Gradient" id="Gradient_u4itg"]
offsets = PackedFloat32Array(0, 0.237624, 0.821782, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 0.733, 0.11, 1, 0.890196, 0.435294, 0.141176, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_0qsdm"]
gradient = SubResource("Gradient_u4itg")

[sub_resource type="Curve" id="Curve_utg36"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.283262, 1), 0.0, 0.0, 0, 0, Vector2(0.755365, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_15ddi"]
curve = SubResource("Curve_utg36")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_jw57r"]
particle_flag_disable_z = true
direction = Vector3(-1, 0, 0)
spread = 75.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 60.0
initial_velocity_max = 80.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_curve = SubResource("CurveTexture_15ddi")
color_ramp = SubResource("GradientTexture1D_0qsdm")

[node name="MiddleShot" type="StaticBody2D"]
collision_layer = 8
collision_mask = 0
script = ExtResource("1_fjcff")

[node name="ProjectileComponent" parent="." instance=ExtResource("2_vlwws")]
speed = 380

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "flying"
libraries = {
"": SubResource("AnimationLibrary_2f8kg")
}

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_ikpc1")
position = Vector2(-2, 0)
texture = ExtResource("2_sgtno")
hframes = 4
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_8nyv0")

[node name="TerrainRayCast" type="RayCast2D" parent="."]
visible = false
target_position = Vector2(11, 0)

[node name="HitboxComponent" parent="." instance=ExtResource("3_8bce1")]
visible = false
collision_layer = 8
collision_mask = 4
damage = 4
oneshot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("CircleShape2D_aioff")
debug_color = Color(0.819608, 0.364706, 0.447059, 0.419608)

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
emitting = false
amount = 20
process_material = SubResource("ParticleProcessMaterial_jw57r")
lifetime = 0.1
one_shot = true
explosiveness = 0.8

[node name="HitSE" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_eutnr")
volume_db = -23.11
pitch_scale = 3.05
bus = &"SE"

[node name="ShootSE" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("6_3rqb2")
volume_db = -27.633
pitch_scale = 1.15
bus = &"SE"

[node name="BlockedSE" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_mm37u")
volume_db = -12.787
bus = &"SE"

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
visible = false
scale = Vector2(3.6, 3.6)

[connection signal="blocked" from="HitboxComponent" to="." method="_on_hitbox_component_blocked"]
[connection signal="hit" from="HitboxComponent" to="." method="_on_hitbox_component_hit"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
